2002-11-30 (THH):
  * Added the possibility to select the GEM resolution to the TOS/GEM dialog.
  * Rewrote ConvertVDIRes_2Colour() in C for big monochrome VDI resolutions.

2002-10-13 (THH):
  * Rewrote ConvertVDIRes_16Colour() in C and added Line-A/VDI patches
    so that Hatari now also features a VDI big resolution mode.

2002-09-21 (THH):
  * Added YM and WAV sound recording (to hatari.ym or hatari.wav since the
    GUI does not support editing strings yet).
  * Introduced "System" setup dialog for configuring the ST hardware
    (currently CPU and blitter).

2002-08-11 (THH):
  * Fixed bug in the blitter function, so the letters in the menu bar of the
    desktop are now correct.

2002-07-08 (THH):
  * Some more endianess patches for spec512 screens - looks much better now!
  * Fixed the bug that caused Hatari to crash when it was not able to load
    the font image.

2002-07-04 (THH):
  * Added experimental blitter emulation (taken from STonX).
    "Wings Of Death" started working now - wow!

2002-07-03 (THH):
  * Separated SDL_INIT_JOYSTICK and SDL_INIT_AUDIO from Main_Init(), since
    failures during joystick/audio initialization shouldn't be fatal.
  * Short-Cuts now also work with the "apple" key on Mac OS X.
  * Some endianess patches for the spec512 convertion routine (but it is
    still not yet working right).

2002-02-21 (THH):
  * Fixed bug in tos.c - TOS 1.00 has been wrongly patched and did not work
    any more...

2002-02-18 (THH):  *** Version 0.20 ***
  * Setting the HD drives is now also included in the GUI.
  * Updated the readme.txt.

2002-02-05 (Thomas Huth):
  * Added Svens HD-image patch.
  * Yet another bugfix for BeOS (lseek again...)

2002-01-14 (Thomas Huth):
  * Added (real) joystick support.

2002-01-02 (Thomas Huth):
  * Fixed some problems with the CPU reset.
  * Updated the GUI.

2001-12-27 (Thomas Huth):
  * Finished the first working version of the GUI. Not yet perfect,
    but many things can now be configured there.