@@ -109,7 +109,7 @@ extern void Screen_UnInit(void);
 extern void Screen_Reset(void);
 extern void Screen_SetScreenLineOffsets(void);
 extern void Screen_SetFullUpdate(void);
-extern void Screen_SetupRGBTable(BOOL bFullScreen);
+extern void Screen_SetupRGBTable(void);
 extern void Screen_EnterFullScreen(void);
 extern void Screen_ReturnFromFullScreen(void);
 extern void Screen_ClearScreen(void);
